tests/agl/rejections/parse/if_in_inline_catch.agl
try pass catch _ => if true => pass | else => pass
